--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm happily hosted with GitHub Pages. Now a Jekyll sort of site.</p>
-</body>
-</html>
+---
+layout: default
+---
+<h1>Hello World again</h1>
+<p>I'm happily hosted with GitHub Pages. Now a Jekyll sort of site. Yay!</p>
