--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 ---
 layout: default
 ---
+
 <h1>Hello World again</h1>
 <p>I'm happily hosted with GitHub Pages. Now a Jekyll sort of site. Yay!</p>
+
+<div class="container">
+  <h2 class="spacing">Blog posts</h2>
+
+  <div class="blog-posts">
+    {% for post in site.posts %}
+      <div class="blog-post spacing">
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <p class="summary">
+          {{ post.category }}
+          <span class="date">
+            {{ post.date | date: '%B %d, %Y' }}
+          </span>
+        </p>
+        {{ post.excerpt }}
+      </div>
+    {% endfor %}
+  </div>
+</div>
