Erased posts before publishing www

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<h1>Hello World again</h1>
-<p>I'm happily hosted with GitHub Pages. Now a Jekyll sort of site. Yay!</p>
+<h1>pekkos.com</h1>
 
 <div class="container">
   <h2 class="spacing">Blog posts</h2>
