--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1>pekkos.com</h1>
 
 <div class="container">
-  <h2 class="spacing">Blog posts by me.</h2>
+  <h2 class="spacing">Blog posts by me..</h2>
 
   <div class="blog-posts">
     
