--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 ---
 layout: default
+title: Home
 ---
 
-<h1>pekkos.com</h1>
 
 <div class="container">
-  <h2 class="spacing">Blog</h2>
-
   <div class="blog-posts">
     {% for post in site.posts %}
-      <div class="blog-post spacing">
+      <div class="blog-post">
         <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
         <p class="summary">
           {{ post.category }}
