--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Home
     {% for post in site.posts %}
       <div class="blog-post">
         <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <div><a href="{{ post.url}}index.html#disqus_thread">comments</a></div>
         <p class="summary">
           {{ post.category }}
           <span class="date">
